--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
 "autoread": false,
-"autoplaymusic": true,
+"autoplaymusic": false,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"ZukaChan", 
-"NomorOwner":"6281398860278",
-"NamaOwner":"Helgaa", 
+"NamaBot":"SikqBot", 
+"NomorOwner":"6288297688366",
+"NamaOwner":"Sikq2RU", 
 "HelKey": ""
 }
