--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "WhatsApp Helga Ilham",
+  "name": "Sikq",
     "logo": "https://f.top4top.io/p_2149d3qg60.jpg",
-    "description": "Subscribe Helga Zex's",
+    "description": "Subscribe To Sikq",
   "keywords": ["nodejs", "bot", "whatsapp bot"]
     "repository": "https://github.com/HelgaIlham/HELGAV10",
   "buildpacks": [
